--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>RUN BUDDY</h1>
-        What We Do
+        What We Do What You Do Your Trainers Reach Out
         <h2>RUN BUDDY</h2>
         <h3>RUN BUDDY</h3>
     </body>
