--- a/index.html
+++ b/index.html
@@ -5,9 +5,38 @@
         <title>Run Budd</title>
     </head>
     <body>
-        <h1>RUN BUDDY</h1>
-        What We Do What You Do Your Trainers Reach Out
-        <h2>RUN BUDDY</h2>
-        <h3>RUN BUDDY</h3>
+        <!-- navigtion -->
+        <header>
+            <h1>RUN BUDDY</h1>
+        </header>
+
+        <!-- hero/jumbotron -->
+        <section>
+        </section>
+
+        <!-- "what we do" section -->
+        <section>
+            <h2>What We Do</h2>
+        </section>
+
+        <!-- "what you do" section -->
+        <section>
+            <h2>What You Do</h2>
+        </section>
+        
+        <!-- "meet the trainers" section -->
+        <section>
+            <h2>Meet The Trainers</h2>
+        </section>
+
+        <!-- "reach ou" section -->
+        <section>
+            <h2>Reach Out</h2>
+        </section>
+
+        <!-- footer -->
+        <footer>
+            <h2>  &#10084;&#65039; Made With Love by Run Buddy &#10084;&#65039;</h2>
+        </footer>
     </body>
 </html>                          
