--- a/index.html
+++ b/index.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
     <head>
         <meta charset="UFT=8" />
         <title>Run Budd</title>
     </head>
+
     <body>
         <!-- navigtion -->
         <header>
-            <h1>RUN BUDDY</h1>
+            <h1>
+                <a href="/">Run Buddy</a>
+            </h1>
+            <nav>
+                <!-- Unordered list element -->
+                <ul>
+                    <!-- List item element -->
+                    <li>
+                        <!-- Anchor element -->
+                        <a href="#what-we-do">What We Do</a>
+                    </li>
+                    <li>
+                        <a href="#what-you-do">What You Do</a>
+                    </li>
+                    <li>
+                        <a href="#your-trainers">Your Trainers</a>
+                    </li>
+                    <li>
+                        <a href="#reach-out">Reach Out</a>
+                    </li>
+                </ul>
+            </nav>
         </header>
 
         <!-- hero/jumbotron -->
@@ -36,7 +59,8 @@
 
         <!-- footer -->
         <footer>
-            <h2>  &#10084;&#65039; Made With Love by Run Buddy &#10084;&#65039;</h2>
+            <h2>❤️ Made With Love by Run Buddy.</h2>
         </footer>
     </body>
+    
 </html>                          
