--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <head>
         <meta charset="UFT=8" />
         <title>Run Budd</title>
+        
+        <!-- link the .css file -->
+        <link rel="stylesheet" href="./assets/css/style.css" />
+
     </head>
 
     <body>
