--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <head>
         <meta charset="UFT=8" />
         <title>Run Budd</title>
-        
         <!-- link the .css file -->
         <link rel="stylesheet" href="./assets/css/style.css" />
-
     </head>
 
     <body>
         <!-- navigtion -->
         <header>
             <h1>
-                <a href="/">Run Buddy</a>
+                <a href="/">
+                    Run Buddy
+                </a>
             </h1>
             <nav>
                 <!-- Unordered list element -->
@@ -64,6 +64,11 @@
         <!-- footer -->
         <footer>
             <h2>❤️ Made With Love by Run Buddy.</h2>
+            <div>
+                <a href="#">Read Our Privacy Policy</a>
+                <br/>
+                &copy; 2019 Run Buddy, Inc.
+            </div>
         </footer>
     </body>
     
