--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header>
             <h1>
                 <a href="/">
-                    Run Buddy
+                    Just testing
                 </a>
             </h1>
             <nav>
