--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <head>
         <meta charset="UFT=8" />
         <title>Run Budd</title>
-        
         <!-- link the .css file -->
         <link rel="stylesheet" href="./assets/css/style.css" />
-
     </head>
 
     <body>
         <!-- navigtion -->
         <header>
             <h1>
-                <a href="/">Run Buddy</a>
+                <a href="/">
+                    Run Buddy
+                </a>
             </h1>
             <nav>
                 <!-- Unordered list element -->
@@ -38,7 +38,35 @@
         </header>
 
         <!-- hero/jumbotron -->
-        <section>
+        <section class="hero">
+            <div class="hero-form">
+                <h3>Get Started Today</h3>
+                <p>Fill our this form and one of our trainers will schedule a consult</p>
+                <!-- add form element -->
+                <form>
+                    <label for="name">Enter full name:</label>
+                    <input class="form-input" type="text" placeholder="Your Name" name="name" id="name" />
+                    <label for="email">Enter email address:</label>
+                    <input class="form-input" type="email" placeholder="Your Email" name="email" id="email" />
+                    <label for="phone">Enter a telephone number:</label>
+                    <input class="form-input" type="tel" placeholder="Phone Number" name="phone" id="phone" />
+                    <p>
+                        Have you worked out with a trainer before?
+                        <input type="radio" name="trainer-confirm" id="trainer-yes" />
+                        <label for="trainer-yes">Yes</label>
+                        <input type="radio" name="trainer-confirm" id="trainer-no" />
+                        <label for="trainer-no">No</label>
+                    </p>
+                    <p>
+                        <!-- using only "<input type="checkbox" />" looks like it works -->
+                        I acknowledge that I am at least 18 years of age.
+                        <input type="checkbox" />
+                    </p>
+                    <button type="submit">
+                        Get Running!
+                    </button>
+                </form>
+            </div>
         </section>
 
         <!-- "what we do" section -->
@@ -64,6 +92,11 @@
         <!-- footer -->
         <footer>
             <h2>❤️ Made With Love by Run Buddy.</h2>
+            <div>
+                <a href="#">Read Our Privacy Policy</a>
+                <br/>
+                &copy; 2019 Run Buddy, Inc.
+            </div>
         </footer>
     </body>
     
