--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <h2>Reach Out</h2>
         </section>
 
-        <!-- footer -->
+        <!-- Footer -->
         <footer>
             <h2>❤️ Made With Love by Run Buddy.</h2>
             <div>
