--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header>
             <h1>
                 <a href="/">
-                    Run Buddy
+                    RUN BUDDY
                 </a>
             </h1>
             <nav>
@@ -58,9 +58,10 @@
                         <label for="trainer-no">No</label>
                     </p>
                     <p>
-                        <!-- using only "<input type="checkbox" />" looks like it works -->
+                        <label for="checkbox">
                         I acknowledge that I am at least 18 years of age.
-                        <input type="checkbox" />
+                        </label>
+                        <input type="checkbox" name="checkpoint1" id="checkbox" />
                     </p>
                     <button type="submit">
                         Get Running!
@@ -70,13 +71,32 @@
         </section>
 
         <!-- "what we do" section -->
-        <section>
+        <section id="what-we-do">
             <h2>What We Do</h2>
+            <p>
+                butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
+            </p>
         </section>
 
         <!-- "what you do" section -->
-        <section>
+        <section id="what-you-do">
             <h2>What You Do</h2>
+            <div>
+                <h3>Step 1: Fill Out the Form Above.</h3>
+                <p>You're already here, so why not?</p>
+            </div>
+            <div>
+                <h3>Step 2: Consult with One of Our Trainers.</h3>
+                <p>Are you here to build muscle, lose weight, or just feel good?</p>
+            </div>
+            <div>
+                <h3>Step 3: Get Running</h3>
+                <p>Hit the ground running (literally) once your trainer lays our your plan.</p>
+            </div>
+            <div>
+                <h3>Step 4: See Results.</h3>
+                <p>Bi-weekly checkins with your trainer will keep you focused</p>
+            </div>
         </section>
         
         <!-- "meet the trainers" section -->
@@ -84,7 +104,7 @@
             <h2>Meet The Trainers</h2>
         </section>
 
-        <!-- "reach ou" section -->
+        <!-- "reach out" section -->
         <section>
             <h2>Reach Out</h2>
         </section>
