--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
           </p>
         </div>
       </article>
+      <!-- second trainer bio -->
       <article class="trainer">
         <div class="trainer-bio text-right">
           <h3>Joanna Gill</h3>
@@ -149,6 +150,7 @@
         </div>
         <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after workout" />
       </article>
+      <!-- third trainer bio -->
       <article class="trainer">
         <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
         <div class="trainer-bio text-left">
@@ -164,6 +166,29 @@
     <!-- "reach out" section -->
     <section id="reach-out" class="">
       <h2>Reach Out</h2>
+      <div class="contact-info">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2823.262377140174!2d-93.1585481842595!3d44.95866097505335!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x52b32b3508f19731%3A0xed3e079e41a0417e!2s1331%20Edmund%20Ave%20W%2C%20St%20Paul%2C%20MN%2055104!5e0!3m2!1sen!2sus!4v1639627594716!5m2!1sen!2sus" 
+          width="400" 
+          height="400" 
+          style="border:0;" 
+          allowfullscreen="" 
+          loading="lazy">
+        </iframe>
+      </div>
+      <div>
+        <h3>Run Buddy</h3>
+        <p>Any questions or concerns before signing up?
+          <br />
+          Let us know and we'll be happy to talk to you!
+        </p>
+        <address>
+          55 Main Street <br />
+          Some Town, Ca <br />
+          12345 <br />
+          P: 555.RUN.BUDZ (555.786.2839) <br />
+          E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+        </address>
+      </div>
     </section>
 
     <!-- Footer -->
