--- a/index.html
+++ b/index.html
@@ -164,18 +164,16 @@
     </section>
 
     <!-- "reach out" section -->
-    <section id="reach-out" class="">
-      <h2>Reach Out</h2>
+    <section id="reach-out" class="contact">
+      <h2 class="section-title secundary-border">Reach Out</h2>
       <div class="contact-info">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2823.262377140174!2d-93.1585481842595!3d44.95866097505335!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x52b32b3508f19731%3A0xed3e079e41a0417e!2s1331%20Edmund%20Ave%20W%2C%20St%20Paul%2C%20MN%2055104!5e0!3m2!1sen!2sus!4v1639627594716!5m2!1sen!2sus" 
-          width="400" 
-          height="400" 
+        <iframe 
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2823.262377140174!2d-93.1585481842595!3d44.95866097505335!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x52b32b3508f19731%3A0xed3e079e41a0417e!2s1331%20Edmund%20Ave%20W%2C%20St%20Paul%2C%20MN%2055104!5e0!3m2!1sen!2sus!4v1639627594716!5m2!1sen!2sus" 
           style="border:0;" 
           allowfullscreen="" 
           loading="lazy">
         </iframe>
-      </div>
-      <div>
+      <div class="contact-info">
         <h3>Run Buddy</h3>
         <p>Any questions or concerns before signing up?
           <br />
