--- a/index.html
+++ b/index.html
@@ -173,19 +173,21 @@
           allowfullscreen="" 
           loading="lazy">
         </iframe>
-      <div class="contact-info">
-        <h3>Run Buddy</h3>
-        <p>Any questions or concerns before signing up?
-          <br />
-          Let us know and we'll be happy to talk to you!
-        </p>
-        <address>
-          55 Main Street <br />
-          Some Town, Ca <br />
-          12345 <br />
-          P: 555.RUN.BUDZ (555.786.2839) <br />
-          E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
-        </address>
+        <div class="contact-info">
+          <h3>Run Buddy</h3>
+          <p>
+            Any questions or concerns before signing up?
+            <br />
+            Let us know and we'll be happy to talk to you!
+          </p>
+          <address>
+            55 Main Street <br />
+            Some Town, Ca <br />
+            12345 <br />
+            P: 555.RUN.BUDZ (555.786.2839) <br />
+            E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+          </address>
+        </div>
       </div>
     </section>
 
@@ -193,7 +195,7 @@
     <footer>
       <h2>❤️ Made With Love by Run Buddy.</h2>
       <div>
-        <a href="#">Read Our Privacy Policy</a>
+        <a href="./privacy-policy.html">Read Our Privacy Policy</a>
         <br />
         &copy; 2019 Run Buddy, Inc.
       </div>
