--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UFT=8" />
-    <title>Run Budd</title>
+    <title>Run Buddy</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
 
   <body>
-    <!-- navigtion -->
+    <!-- navigation -->
     <header>
       <h1>
         <a href="/"> RUN BUDDY </a>
@@ -126,16 +126,20 @@
 
     <!-- "meet the trainers" section -->
     <section id="your-trainers" class="trainers">
-      <h2 class="section-title primary-border">
-        Meet The Trainers
-      </h2>
+      <h2 class="section-title primary-border">Meet The Trainers</h2>
       <article class="trainer">
-        <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+        <img
+          src="./assets/images/trainer-1.jpg"
+          alt="Arron Stephens in his workout clothes, ready to pump iron"
+        />
         <div class="trainer-bio text-left">
           <h3>Arron Stephens</h3>
           <h4>Speed / Strengh</h4>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, corporis nostrum eaque nam rerum similique 
-            nobis? Libero commodi quibusdam at itaque numquam hic optio. A suscipit adipisci facere blanditiis excepturi!
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque,
+            corporis nostrum eaque nam rerum similique nobis? Libero commodi
+            quibusdam at itaque numquam hic optio. A suscipit adipisci facere
+            blanditiis excepturi!
           </p>
         </div>
       </article>
@@ -144,20 +148,32 @@
         <div class="trainer-bio text-right">
           <h3>Joanna Gill</h3>
           <h4>Endurance</h4>
-          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim possimus suscipit eum 
-            perspiciatis sequi maxime, officiis quod cupiditate natus rerum eius, odit iure vitae culpa aperiam corrupti velit. Consequuntur, excepturi.
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim
+            possimus suscipit eum perspiciatis sequi maxime, officiis quod
+            cupiditate natus rerum eius, odit iure vitae culpa aperiam corrupti
+            velit. Consequuntur, excepturi.
           </p>
         </div>
-        <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after workout" />
+        <img
+          src="./assets/images/trainer-2.jpg"
+          alt="Joanna Gill cooling off after workout"
+        />
       </article>
       <!-- third trainer bio -->
       <article class="trainer">
-        <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+        <img
+          src="./assets/images/trainer-3.jpg"
+          alt="Harry Smith wearing a headband and lifting comically small pink weights"
+        />
         <div class="trainer-bio text-left">
           <h3>Harry "the Headband" Smith</h3>
           <h4>Strength</h4>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique vitae aliquid sapiente, 
-            obcaecati harum animi iste possimus. Velit illum impedit nihil, eum laudantium pariatur unde ratione vel alias molestias rerum!
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique
+            vitae aliquid sapiente, obcaecati harum animi iste possimus. Velit
+            illum impedit nihil, eum laudantium pariatur unde ratione vel alias
+            molestias rerum!
           </p>
         </div>
       </article>
@@ -167,11 +183,12 @@
     <section id="reach-out" class="contact">
       <h2 class="section-title secundary-border">Reach Out</h2>
       <div class="contact-info">
-        <iframe 
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2823.262377140174!2d-93.1585481842595!3d44.95866097505335!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x52b32b3508f19731%3A0xed3e079e41a0417e!2s1331%20Edmund%20Ave%20W%2C%20St%20Paul%2C%20MN%2055104!5e0!3m2!1sen!2sus!4v1639627594716!5m2!1sen!2sus" 
-          style="border:0;" 
-          allowfullscreen="" 
-          loading="lazy">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2823.262377140174!2d-93.1585481842595!3d44.95866097505335!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x52b32b3508f19731%3A0xed3e079e41a0417e!2s1331%20Edmund%20Ave%20W%2C%20St%20Paul%2C%20MN%2055104!5e0!3m2!1sen!2sus!4v1639627594716!5m2!1sen!2sus"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+        >
         </iframe>
         <div class="contact-info">
           <h3>Run Buddy</h3>
