--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
 
     <!-- hero/jumbotron -->
     <section class="hero">
+      <div class="hero-cta">
+        <h2>Start Building Habits.</h2>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus, minus quos, fuga porro aliquam nam quas pariatur cumque quia, unde voluptates. Numquam molestias velit, eligendi id nihil dolor labore nostrum.
+        </p>
+      </div>
       <div class="hero-form">
         <h3>Get Started Today</h3>
         <p>
