--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
       <div class="hero-cta">
         <h2>Start Building Habits.</h2>
         <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus, minus quos, fuga porro aliquam nam quas pariatur cumque quia, unde voluptates. Numquam molestias velit, eligendi id nihil dolor labore nostrum.
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus,
+          minus quos, fuga porro aliquam nam quas pariatur cumque quia, unde
+          voluptates. Numquam molestias velit, eligendi id nihil dolor labore
+          nostrum.
         </p>
       </div>
       <div class="hero-form">
@@ -91,20 +94,26 @@
 
     <!-- "what we do" section -->
     <section id="what-we-do" class="intro">
-      <h2 class="section-title primary-border">What We Do</h2>
-      <p>
-        butcher selfies chambray shabby chic gentrify readymade yr Echo Park
-        XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you
-        probably haven't heard of them single-origin coffee Vice fanny pack
-        fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson
-        Thundercats viral bitters flannel meggings narwhal Marfa Schlitz
-        sustainable Intelligentsia umami deep v craft
-      </p>
+      <div class="flex-row">
+        <h2 class="section-title primary-border">What We Do</h2>
+      </div>
+      <div class="flex-row">
+        <p>
+          butcher selfies chambray shabby chic gentrify readymade yr Echo Park
+          XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you
+          probably haven't heard of them single-origin coffee Vice fanny pack
+          fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson
+          Thundercats viral bitters flannel meggings narwhal Marfa Schlitz
+          sustainable Intelligentsia umami deep v craft
+        </p>
+      </div>
     </section>
 
     <!-- "what you do" section -->
     <section id="what-you-do" class="steps">
-      <h2 class="section-title secundary-border">What You Do</h2>
+      <div class="flex-row">
+        <h2 class="section-title secundary-border">What You Do</h2>
+      </div>
       <div>
         <img src="./assets/images/step-1.svg" alt="" />
         <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
@@ -132,7 +141,9 @@
 
     <!-- "meet the trainers" section -->
     <section id="your-trainers" class="trainers">
-      <h2 class="section-title primary-border">Meet The Trainers</h2>
+      <div class="flex-row">
+        <h2 class="section-title primary-border">Meet The Trainers</h2>
+      </div>
       <article class="trainer">
         <img
           src="./assets/images/trainer-1.jpg"
@@ -187,7 +198,9 @@
 
     <!-- "reach out" section -->
     <section id="reach-out" class="contact">
-      <h2 class="section-title secundary-border">Reach Out</h2>
+      <div class="flex-row">
+        <h2 class="section-title secundary-border">Reach Out</h2>
+      </div>
       <div class="contact-info">
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2823.262377140174!2d-93.1585481842595!3d44.95866097505335!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x52b32b3508f19731%3A0xed3e079e41a0417e!2s1331%20Edmund%20Ave%20W%2C%20St%20Paul%2C%20MN%2055104!5e0!3m2!1sen!2sus!4v1639627594716!5m2!1sen!2sus"
