add flexbox to the trainers

--- a/index.html
+++ b/index.html
@@ -165,60 +165,53 @@
     </section>
 
     <!-- "meet the trainers" section -->
-    <section id="your-trainers" class="trainers">
+    <section id="your-trainers">
       <div class="flex-row">
         <h2 class="section-title primary-border">Meet The Trainers</h2>
       </div>
-      <article class="trainer">
-        <img
-          src="./assets/images/trainer-1.jpg"
-          alt="Arron Stephens in his workout clothes, ready to pump iron"
-        />
-        <div class="trainer-bio text-left">
-          <h3>Arron Stephens</h3>
-          <h4>Speed / Strengh</h4>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque,
-            corporis nostrum eaque nam rerum similique nobis? Libero commodi
-            quibusdam at itaque numquam hic optio. A suscipit adipisci facere
-            blanditiis excepturi!
-          </p>
-        </div>
-      </article>
-      <!-- second trainer bio -->
-      <article class="trainer">
-        <div class="trainer-bio text-right">
-          <h3>Joanna Gill</h3>
-          <h4>Endurance</h4>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim
-            possimus suscipit eum perspiciatis sequi maxime, officiis quod
-            cupiditate natus rerum eius, odit iure vitae culpa aperiam corrupti
-            velit. Consequuntur, excepturi.
-          </p>
-        </div>
-        <img
-          src="./assets/images/trainer-2.jpg"
-          alt="Joanna Gill cooling off after workout"
-        />
-      </article>
-      <!-- third trainer bio -->
-      <article class="trainer">
-        <img
-          src="./assets/images/trainer-3.jpg"
-          alt="Harry Smith wearing a headband and lifting comically small pink weights"
-        />
-        <div class="trainer-bio text-left">
-          <h3>Harry "the Headband" Smith</h3>
-          <h4>Strength</h4>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique
-            vitae aliquid sapiente, obcaecati harum animi iste possimus. Velit
-            illum impedit nihil, eum laudantium pariatur unde ratione vel alias
-            molestias rerum!
-          </p>
-        </div>
-      </article>
+      <div class="trainers">
+        <article class="trainer">
+          <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+          <div class="trainer-bio">
+            <h3 class="trainer-name">Arron Stephens</h3>
+            <h4 class="trainer-role">Speed / Strength</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque,
+              corporis nostrum eaque nam rerum similique nobis? Libero commodi
+              quibusdam at itaque numquam hic optio. A suscipit adipisci facere
+              blanditiis excepturi!
+            </p>
+          </div>
+        </article>
+        <!-- second trainer bio -->
+        <article class="trainer">
+          <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after workout" />
+          <div class="trainer-bio">
+            <h3 class="trainer-name">Joanna Gill</h3>
+            <h4 class="trainer-role">Endurance</h4>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim
+              possimus suscipit eum perspiciatis sequi maxime, officiis quod
+              cupiditate natus rerum eius, odit iure vitae culpa aperiam corrupti
+              velit. Consequuntur, excepturi.
+            </p>
+          </div>
+        </article>
+        <!-- third trainer bio -->
+        <article class="trainer">
+          <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+          <div class="trainer-bio">
+            <h3 class="trainer-name">Harry "the Headband" Smith</h3>
+            <h4 class="trainer-role">Strength</h4>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique
+              vitae aliquid sapiente, obcaecati harum animi iste possimus. Velit
+              illum impedit nihil, eum laudantium pariatur unde ratione vel alias
+              molestias rerum!
+            </p>
+          </div>
+        </article>
+      </div>
     </section>
 
     <!-- "reach out" section -->
