--- a/index.html
+++ b/index.html
@@ -220,26 +220,7 @@
         <h2 class="section-title secundary-border">Reach Out</h2>
       </div>
       <div class="contact-info">
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2823.262377140174!2d-93.1585481842595!3d44.95866097505335!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x52b32b3508f19731%3A0xed3e079e41a0417e!2s1331%20Edmund%20Ave%20W%2C%20St%20Paul%2C%20MN%2055104!5e0!3m2!1sen!2sus!4v1639627594716!5m2!1sen!2sus"
-          style="border: 0"
-          allowfullscreen=""
-          loading="lazy"
-        >
-        </iframe>
-        <div class="contact-form">
-          <h3>Contact Us</h3>
-          <form>
-            <label for="contact-name">Your Name</label>
-            <input type="text" id="contact-name" placeholder="You Name" />
-
-            <label for="contact-message">Message</label>
-            <textarea id="contact-message" placeholder="Message"></textarea>
-
-            <button type="submit">Submit</button>
-          </form>
-        </div>
-        <div class="contact-info">
+        <div>
           <h3>Run Buddy</h3>
           <p>
             Any questions or concerns before signing up?
@@ -254,6 +235,24 @@
             E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
           </address>
         </div>
+        <div class="contact-form">
+          <h3>Contact Us</h3>
+          <form>
+            <label for="contact-name">Your Name</label>
+            <input type="text" id="contact-name" placeholder="You Name" />
+
+            <label for="contact-message">Message</label>
+            <textarea id="contact-message" placeholder="Message"></textarea>
+
+            <button type="submit">Submit</button>
+          </form>
+        </div>
+        <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2823.262377140174!2d-93.1585481842595!3d44.95866097505335!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x52b32b3508f19731%3A0xed3e079e41a0417e!2s1331%20Edmund%20Ave%20W%2C%20St%20Paul%2C%20MN%2055104!5e0!3m2!1sen!2sus!4v1639627594716!5m2!1sen!2sus"
+        style="border: 0"
+        allowfullscreen=""
+        loading="lazy">
+        </iframe>
       </div>
     </section>
 
