--- a/index.html
+++ b/index.html
@@ -146,9 +146,12 @@
           </div>
           <div class="step-text">
             <h4>Get Running.</h4>
-            <p>Hit the ground running (literally) once your trainer lays our your plan.</p>
+            <p>
+              Hit the ground running (literally) once your trainer lays our your
+              plan.
+            </p>
           </div>
-        </div> 
+        </div>
       </div>
       <div class="step">
         <h3>Step 4.</h3>
@@ -158,7 +161,7 @@
           </div>
           <div class="step-text">
             <h4>See Results.</h4>
-            <p>Bi-weekly checkins with your trainer will keep you focused</p>
+            <p>Bi-weekly check-ins with your trainer will keep you focused</p>
           </div>
         </div>
       </div>
@@ -171,7 +174,10 @@
       </div>
       <div class="trainers">
         <article class="trainer">
-          <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+          <img
+            src="./assets/images/trainer-1.jpg"
+            alt="Arron Stephens in his workout clothes, ready to pump iron"
+          />
           <div class="trainer-bio">
             <h3 class="trainer-name">Arron Stephens</h3>
             <h4 class="trainer-role">Speed / Strength</h4>
@@ -185,29 +191,35 @@
         </article>
         <!-- second trainer bio -->
         <article class="trainer">
-          <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after workout" />
+          <img
+            src="./assets/images/trainer-2.jpg"
+            alt="Joanna Gill cooling off after workout"
+          />
           <div class="trainer-bio">
             <h3 class="trainer-name">Joanna Gill</h3>
             <h4 class="trainer-role">Endurance</h4>
             <p>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim
               possimus suscipit eum perspiciatis sequi maxime, officiis quod
-              cupiditate natus rerum eius, odit iure vitae culpa aperiam corrupti
-              velit. Consequuntur, excepturi.
+              cupiditate natus rerum eius, odit iure vitae culpa aperiam
+              corrupti velit. Consequuntur, excepturi.
             </p>
           </div>
         </article>
         <!-- third trainer bio -->
         <article class="trainer">
-          <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+          <img
+            src="./assets/images/trainer-3.jpg"
+            alt="Harry Smith wearing a headband and lifting comically small pink weights"
+          />
           <div class="trainer-bio">
             <h3 class="trainer-name">Harry "the Headband" Smith</h3>
             <h4 class="trainer-role">Strength</h4>
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique
-              vitae aliquid sapiente, obcaecati harum animi iste possimus. Velit
-              illum impedit nihil, eum laudantium pariatur unde ratione vel alias
-              molestias rerum!
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Similique vitae aliquid sapiente, obcaecati harum animi iste
+              possimus. Velit illum impedit nihil, eum laudantium pariatur unde
+              ratione vel alias molestias rerum!
             </p>
           </div>
         </article>
@@ -248,10 +260,10 @@
           </form>
         </div>
         <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2823.262377140174!2d-93.1585481842595!3d44.95866097505335!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x52b32b3508f19731%3A0xed3e079e41a0417e!2s1331%20Edmund%20Ave%20W%2C%20St%20Paul%2C%20MN%2055104!5e0!3m2!1sen!2sus!4v1639627594716!5m2!1sen!2sus"
-        style="border: 0"
-        allowfullscreen=""
-        loading="lazy">
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2823.262377140174!2d-93.1585481842595!3d44.95866097505335!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x52b32b3508f19731%3A0xed3e079e41a0417e!2s1331%20Edmund%20Ave%20W%2C%20St%20Paul%2C%20MN%2055104!5e0!3m2!1sen!2sus!4v1639627594716!5m2!1sen!2sus"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy">
         </iframe>
       </div>
     </section>
