--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UFT=8" />
     <title>Run Buddy</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
 
   <body>
@@ -263,7 +264,8 @@
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2823.262377140174!2d-93.1585481842595!3d44.95866097505335!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x52b32b3508f19731%3A0xed3e079e41a0417e!2s1331%20Edmund%20Ave%20W%2C%20St%20Paul%2C%20MN%2055104!5e0!3m2!1sen!2sus!4v1639627594716!5m2!1sen!2sus"
           style="border: 0"
           allowfullscreen=""
-          loading="lazy">
+          loading="lazy"
+        >
         </iframe>
       </div>
     </section>
